<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:id="@+id/layout_about_root"
		android:padding="10dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
		<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			>
			<LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>
				<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="14.0sp"
					android:paddingBottom="5dip"
					android:text="@string/version_header"
					/>
				<TextView
					android:id="@+id/version_container"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textSize="14.0sp"
					android:paddingBottom="5dip"
					/>
			</LinearLayout>
		</HorizontalScrollView>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="14.0sp"
			android:paddingBottom="5dip"
			android:text="@string/author_info"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="14.0sp"
			android:paddingBottom="5dip"
			android:text="@string/last_update"
			/>
		/>
	</LinearLayout>
</ScrollView>

