<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		<CheckBox android:id="@+id/checkbox_id_01"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:text="CheckBox"/>
		<Button android:id="@+id/button_id_01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text= "@string/button_label_01"
			/>
		<Button android:id="@+id/button_id_02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text= "@string/button_label_02"
			/>
		<Button android:id="@+id/button_id_03"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text= "@string/button_label_03"
			/>
		<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    >
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			>
				<TextView android:id="@+id/text_id_01"
					android:layout_width="160dp"
					android:layout_weight="1"
					android:layout_height="200dp"
					android:text=""
					/>
				<TextView android:id="@+id/text_id_02"
					android:layout_width="160dp"
					android:layout_weight="1"
					android:layout_height="200dp"
					android:text=""
					/>
				<TextView android:id="@+id/text_id_03"
					android:layout_width="160dp"
					android:layout_weight="1"
					android:layout_height="200dp"
					android:text=""
					/>
			</LinearLayout>
		</HorizontalScrollView>
	</LinearLayout>
</ScrollView>
